--- a/Projekt/css.css
+++ b/Projekt/css.css
@@ -17,10 +17,18 @@ h1{
 .collectables{
     border: 2px, solid, black;
     background-color: aliceblue;
-    width: 19%;
 }
 
 h2{
     color: cornflowerblue;
     text-align: center;
 }
+
+img{
+    display: block;
+    margin: auto;
+    justify-content: space-around;
+    width: 70%;
+    height:auto;
+}
+
